tests/intrinsic_outside_std/error.txt
Validation error: ./tests/intrinsic_outside_std/intrinsic_outside_std.fae, line 1: Function may not be annotated as an intrinsic outside the standard library
  1| intrinsic
     ^^^^^^^^^
